# NManager

./: App.axaml  App.axaml.cs  CMakeLists.txt  MainWindow.axaml  MainWindow.axaml.cs  NManager.csproj  NManager.sln  Program.cs  README.md  ViewLocator.cs  app.manifest
Models/: MainModel.cs
ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
Views/: MainWindow.axaml  MainWindow.axaml.cs
docs/: TODO.md
res/: main.css  main.ui
res/css/: main.css
res/ui/: add_entry.ui  add_file_window.ui  main.ui  main_window.ui
src/: App.c  App.h  Button.c  Button.h  Dir.c  Dir.h  Directory.c  Directory.h  Entry.c  Entry.h  Error.c  Error.h  File.c  File.h  GlobalState.c  GlobalState.h  Globals.h  Main.c  Main.h  Menu.c  Menu.h  Util.c  Util.h
